src/objects/Executive_Business_Case__c.object
<CustomObject>
    <fields>
        <fullName>Program_Business_Line__c</fullName>
        <inlineHelpText>Enter the Program or Business Line for this Executive Business Case</inlineHelpText>
        <label>Program/Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Portfolio__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>(B) - Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>(BB) - Office of Budget</fullName>
                </value>
                <value>
                    <fullName>(BE) - Office of Strategic Planning &amp; Performance Mgmt</fullName>
                </value>
                <value>
                    <fullName>(BG) - Office of Financial Management</fullName>
                </value>
                <value>
                    <fullName>(BI) - Office of Business and Financial Analytics</fullName>
                </value>
                <value>
                    <fullName>(BR) - Office of Regional Financial Services</fullName>
                </value>
                <value>
                    <fullName>(C) - Office of the Chief Human Capital Officer</fullName>
                </value>
                <value>
                    <fullName>(CA) - Account Management</fullName>
                </value>
                <value>
                    <fullName>(CN) - Management &amp; Performance Improvement</fullName>
                </value>
                <value>
                    <fullName>(CS) - Office of HR Strategy &amp; Services</fullName>
                </value>
                <value>
                    <fullName>(D) - Office of Mission Assurance (Front Office)</fullName>
                </value>
                <value>
                    <fullName>(DE) - Office of Mission Assurance - East Region</fullName>
                </value>
                <value>
                    <fullName>(DP) - Office of Policy and Plans</fullName>
                </value>
                <value>
                    <fullName>(DS) - Office of the Chief Security Officer</fullName>
                </value>
                <value>
                    <fullName>(DW) - Office of Mission Assurance - West Region</fullName>
                </value>
                <value>
                    <fullName>(DX) - Operations Division</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>(H) - Immediate OAS</fullName>
                </value>
                <value>
                    <fullName>(HA) - Executive Secretariat/Forms &amp; Directives</fullName>
                </value>
                <value>
                    <fullName>(HC) - FOIA</fullName>
                </value>
                <value>
                    <fullName>(HC) - IG/GAO Audit</fullName>
                </value>
                <value>
                    <fullName>(HC) - Records Mgt</fullName>
                </value>
                <value>
                    <fullName>(HD) - Travel &amp; Purchase Card Mgt</fullName>
                </value>
                <value>
                    <fullName>(HE) - Internal Acquisition Division</fullName>
                </value>
                <value>
                    <fullName>(HF) - Internal Workplace Division</fullName>
                </value>
                <value>
                    <fullName>(IA) - Office of Government-wide and Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>(IB) - Office of Financial and HR IT Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <inlineHelpText>Populate this field with the planned end date of the Executive Business Case. Either select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name_Help__c</fullName>
        <defaultValue>&quot;The project name should be the same Title as the attached EBC or Amendment document.&quot;</defaultValue>
        <inlineHelpText>The project name should be the same Title as the attached EBC or Amendment document.</inlineHelpText>
        <label>Project Name Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <inlineHelpText>Populate this field with the planned start date of the Executive Business Case. Either select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Project in Project 360 app</inlineHelpText>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipLabel>Executive Business Cases</relationshipLabel>
        <relationshipName>Executive_Business_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Specify the type of the request, the drop down list will provide available values. For Amendments: &quot;Please include the additional amount requested, not the total amount after the adjustment. If you are requesting an additional $25k, just note the $25k&quot;</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Investment (EBC)</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Major Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Amount_1st_Fiscal_Year__c</fullName>
        <inlineHelpText>As an EBC Requestor, please include $0.00 for requested amount when submitting Part I: Concept Request. Please include five year requested amounts when submitting Part II: EBC Template.</inlineHelpText>
        <label>Requested Amount 1st Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_2nd_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a EBC Requestor, you should enter the amount requested for second fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount requested for 2017</inlineHelpText>
        <label>Requested Amount 2nd Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_3rd_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a EBC Requestor, you should enter the amount requested for third fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount requested for 2018</inlineHelpText>
        <label>Requested Amount 3rd Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_4th_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a EBC Requestor, you should enter the amount requested for fourth fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount requested for 2019</inlineHelpText>
        <label>Requested Amount 4th Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_5th_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a EBC Requestor, you should enter the amount requested for fifth fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount requested for 2020</inlineHelpText>
        <label>Requested Amount 5th Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Total_Amount_5_Years__c</fullName>
        <formula>Requested_Amount_1st_Fiscal_Year__c +  Requested_Amount_2nd_Fiscal_Year__c + Requested_Amount_3rd_Fiscal_Year__c + Requested_Amount_4th_Fiscal_Year__c + Requested_Amount_5th_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SA_Comments__c</fullName>
        <inlineHelpText>Record Comments from System Architecture Review. GSA IT Comments or Recommendations are required if GSA IT Review Date is entered. The GSA IT Review is part of the Internal Review process.</inlineHelpText>
        <label>EBC - GSA IT Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Recommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the GSA IT Review. GSA IT Comments or Recommendations are required if GSA IT Review Date is entered.</inlineHelpText>
        <label>EBC - GSA IT Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Review_Completed_Date__c</fullName>
        <inlineHelpText>Populate this field with the date of the System Architecture Review. This is required if SA Comments or Recommendations are entered. Either select from the Date Picker or key in the date directly into the fields. The format is MM/DD/YYYY</inlineHelpText>
        <label>EBC - GSA IT Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_or_Staff_Office_SSO__c</fullName>
        <inlineHelpText>Enter the Key Stakeholders impacted. The list box will provide valid values</inlineHelpText>
        <label>Key Stakeholders Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I - Office of Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - OCIA</fullName>
                </value>
                <value>
                    <fullName>X - OCSIT</fullName>
                </value>
                <value>
                    <fullName>Z - OCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Executive Sponsor Review</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>BRG Review</fullName>
                </value>
                <value>
                    <fullName>PAB Review</fullName>
                </value>
                <value>
                    <fullName>IRB Review</fullName>
                </value>
                <value>
                    <fullName>Governance Review</fullName>
                </value>
                <value>
                    <fullName>Funding Approval</fullName>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fund_Amt_of_Amendment_Enhancements__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Funded Amount of all Amendments/Enhancements.</description>
        <inlineHelpText>Total Funded Amount of all Amendments/Enhancements.</inlineHelpText>
        <label>Total Fund Amt of Amendment/Enhancements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Cost__c</fullName>
        <label>Total Project Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Req_Amt_of_Amendments_Enhancements__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Requested Amount of all Amendments/Enhancements.</description>
        <inlineHelpText>Total Requested Amount of all Amendments/Enhancements.</inlineHelpText>
        <label>Total Req Amt of Amendments/Enhancements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracker__c</fullName>
        <formula>IF
	( 
		CONTAINS(RecordType.Name, &apos;EBC&apos;) &amp;&amp;   NOT(ISPICKVAL(Stage__c, &apos;Funding Approval&apos; )) &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Recalled&apos;)) , 
		&apos;EBC-&apos; &amp;  TEXT(Stage__c)  &amp; &apos;-&apos;&amp; TEXT(Status__c ) , 
		IF
			( 
				CONTAINS(RecordType.Name, &apos;EBC&apos;) &amp;&amp;   ISPICKVAL(Stage__c, &apos;Funding Approval&apos;) &amp;&amp; OR( ISPICKVAL(Status__c, &apos;Pending&apos;), ISPICKVAL(Status__c, &apos;Denied&apos;)),
				&apos;EBC-&apos; &amp;  TEXT(Stage__c)  &amp; &apos;-&apos;&amp; TEXT( Status__c ),
				IF
					(
						CONTAINS(RecordType.Name, &apos;EBC&apos;) &amp;&amp;   ISPICKVAL(Stage__c, &apos;Funding Approval&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Approved&apos;) &amp;&amp; NOT(ISBLANK ( TEXT (Type_of_Funding_Allocated__c))),
						&apos;EBC-&apos; &amp;  TEXT(Stage__c)  &amp; &apos;-&apos;&amp; TEXT( Type_of_Funding_Allocated__c ),
						IF 
							(
								CONTAINS(RecordType.Name, &apos;EBC&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Recalled&apos;),
								&apos;EBC-EBC-Pending&apos;,
								&apos;Concept-&apos; &amp;  TEXT(Stage__c)  &amp; &apos;-&apos;&amp; TEXT(Status__c )
							)
					)
			)
	)</formula>
        <label>Tracker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Funding_Allocated__c</fullName>
        <inlineHelpText>Enter the type of funding allocated, the list box will contain your valid values</inlineHelpText>
        <label>Type of Funding Allocated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Funded</fullName>
                </value>
                <value>
                    <fullName>Partially Funded</fullName>
                </value>
                <value>
                    <fullName>Not Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Executive Business Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Concepts</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Executive_Sponsor_Delegate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Executive_Business_Case__c.Concept_Initial,Executive_Business_Case__c.Concept_Review</value>
        </filters>
        <label>All Concepts</label>
    </listViews>
    <listViews>
        <fullName>EBC_Funding_Executive_Business_Case</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>EBC Funding</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBC_Governance_Executive_Business_Case</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>EBC Governance</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBC_Quality_Review_CFO_Executive_Business_Case</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>EBC Internal Review</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBCs_Created_From_Request</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Requested_Total_Amount_5_Years__c</columns>
        <columns>Executive_Sponsor_Delegate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConvertedFromRequest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EBCs Created From Request</label>
    </listViews>
    <listViews>
        <fullName>Investment_Review_Board</fullName>
        <columns>Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Requested_Total_Amount_5_Years__c</columns>
        <columns>Status__c</columns>
        <columns>Executive_Sponsor_Delegate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Investment Review Board</label>
        <sharedTo>
            <group>EBC_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Request Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Business Cases</pluralLabel>
    <recordTypes>
        <fullName>Concept_Initial</fullName>
        <active>true</active>
        <description>Use this record type for creating concepts</description>
        <label>Concept Initial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Concept_Review</fullName>
        <active>true</active>
        <description>This record type is used for reviewing concepts</description>
        <label>Concept Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBC_CFO_Record_Type</fullName>
        <active>true</active>
        <description>Record type for CFO.</description>
        <label>EBC CFO Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBC_Initial_Request</fullName>
        <active>true</active>
        <description>Initial Request for EBC.</description>
        <label>EBC Initial Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBC_Planning_and_Governance</fullName>
        <active>true</active>
        <description>Record type for Planning and Governance for ETC.</description>
        <label>EBC Planning and Governance</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_have_Parent_Investment_Name</fullName>
        <active>true</active>
        <description>User should not enter a parent investment name when the Request Type is New Investment (EBC)</description>
        <errorConditionFormula>AND(
ISPICKVAL( Request_Type__c , &quot;New Investment (EBC)&quot;) , 
NOT( ISBLANK( Investment_Name__c )    &amp;&amp;    ISBLANK( Other_EBC__c )  )
)</errorConditionFormula>
        <errorDisplayField>Investment_Name__c</errorDisplayField>
        <errorMessage>Do not enter an Original EBC or Other EBC when the Request Type is New Investment (EBC)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_needed_CFO</fullName>
        <active>true</active>
        <description>CFO Comments are required if CFO Review date is entered</description>
        <errorConditionFormula>ISBLANK(  CFO_Comments__c ) &amp;&amp; NOT(ISBLANK( CFO_Review_Date__c ))</errorConditionFormula>
        <errorDisplayField>CFO_Comments__c</errorDisplayField>
        <errorMessage>Please enter CFO Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_or_Recommendations_needed_EA</fullName>
        <active>false</active>
        <description>EARC Comments or EARC Recommendations are required if EARC review date is entered</description>
        <errorConditionFormula>( ISBLANK( EA_Comments__c ) &amp;&amp; ISBLANK( EA_Recommendations__c ) )  &amp;&amp; NOT(ISBLANK(EA_Review_Completed_Date__c ))</errorConditionFormula>
        <errorDisplayField>EA_Review_Completed_Date__c</errorDisplayField>
        <errorMessage>Please enter either EARC Comments or EARC Recommendations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_or_Recommendations_needed_IRB</fullName>
        <active>false</active>
        <description>IRB Comments or IRB Recommendations are required if IRB review date is entered</description>
        <errorConditionFormula>ISBLANK( IRB_Comments__c  ) &amp;&amp; ISBLANK( IRB_Recommendations__c )  &amp;&amp; NOT(ISBLANK( IRB_Review_Date__c ))</errorConditionFormula>
        <errorMessage>Please enter either IRB Comments or IRB Recommendations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_or_Recommendations_needed_PAB</fullName>
        <active>false</active>
        <description>PAB Comments or PAB Recommendations are required if PAB review date is entered</description>
        <errorConditionFormula>( ISBLANK(  PAB_Comments__c  ) &amp;&amp; ISBLANK(  PAB_Recommendations__c ) )  &amp;&amp; NOT(ISBLANK( PAB_Review_Date__c ))  &amp;&amp; ( ISPICKVAL( Stage__c , &quot;Internal Review&quot;) || ISPICKVAL( Stage__c , &quot;Governance Review&quot;) )</errorConditionFormula>
        <errorMessage>Please enter either PAB Comments or PAB Recommendations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_or_Recommendations_needed_SA</fullName>
        <active>true</active>
        <description>SA Comments or SA Recommendations are required if SA review date is entered</description>
        <errorConditionFormula>( ISBLANK( SA_Comments__c ) &amp;&amp; ISBLANK( SA_Recommendations__c ) )  &amp;&amp; NOT(ISBLANK(SA_Review_Completed_Date__c ))</errorConditionFormula>
        <errorDisplayField>SA_Review_Completed_Date__c</errorDisplayField>
        <errorMessage>Please enter either GSA IT Comments or GSA IT Recommendations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EA_or_SA_required_if_request_is_IT_clone</fullName>
        <active>false</active>
        <description>If &apos;IT&apos; is chosen, then either the EA or SA review date fields are required</description>
        <errorConditionFormula>AND( ISPICKVAL(Non_IT_IT__c ,&quot;IT&quot;), 

AND(ISBLANK(SA_Review_Completed_Date__c),ISBLANK(EA_Review_Completed_Date__c)) )</errorConditionFormula>
        <errorMessage>EA or SA Review Dates must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBCConceptCommentsNeededCFO</fullName>
        <active>true</active>
        <description>Concept CFO Comments are required if Concept CFO Review date is entered</description>
        <errorConditionFormula>ISBLANK(   ConceptCFOComments__c ) &amp;&amp; NOT(ISBLANK(  ConceptCFOReviewDate__c ))</errorConditionFormula>
        <errorDisplayField>ConceptCFOComments__c</errorDisplayField>
        <errorMessage>Please enter CFO Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBCConceptCommentsOrRecommendNeededGSAIT</fullName>
        <active>true</active>
        <description>Concept GSA IT Comments or GSA IT Recommendations are required if GSA IT review date is entered</description>
        <errorConditionFormula>( ISBLANK(  ConceptGSAITComments__c ) &amp;&amp; ISBLANK(  ConceptGSAITRecommendations__c ) )  &amp;&amp; NOT(ISBLANK( ConceptGSAITReviewCompletedDate__c ))</errorConditionFormula>
        <errorDisplayField>ConceptGSAITReviewCompletedDate__c</errorDisplayField>
        <errorMessage>Please enter either GSA IT Comments or GSA IT Recommendations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBCConceptReviewDateNeededCFO</fullName>
        <active>false</active>
        <description>If Concept CFO comments have been entered, but Concept CFO review date is blank, throw an error. Concept CFO review date is required.</description>
        <errorConditionFormula>NOT( ISBLANK(    ConceptCFOComments__c )) &amp;&amp; ISBLANK(    ConceptCFOReviewDate__c )</errorConditionFormula>
        <errorDisplayField>ConceptCFOReviewDate__c</errorDisplayField>
        <errorMessage>Please enter the date CFO Review was completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBCConceptReviewDateNeededGSAIT</fullName>
        <active>false</active>
        <description>If GSA IT comments or recommendations have been entered, but GSA IT review date is blank, throw an error. GSA IT review completed date is required.</description>
        <errorConditionFormula>(NOT( ISBLANK(  ConceptGSAITComments__c )) ||  NOT( ISBLANK(  ConceptGSAITRecommendations__c ) ) ) &amp;&amp; ISBLANK(  ConceptGSAITReviewCompletedDate__c )</errorConditionFormula>
        <errorDisplayField>ConceptGSAITReviewCompletedDate__c</errorDisplayField>
        <errorMessage>Please enter the date GSA IT Review was completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBCConceptReviewDateNeededIRB</fullName>
        <active>true</active>
        <description>If IRB comments or recommendations have been entered, but IRB review date is blank, throw an error. IRB review completed date is required.</description>
        <errorConditionFormula>(NOT( ISBLANK(   ConceptIRBComments__c  )) ||  NOT( ISBLANK(   ConceptIRBRecommendations__c ) ) ) &amp;&amp; ISBLANK(   ConceptIRBReviewDate__c )</errorConditionFormula>
        <errorDisplayField>ConceptIRBReviewDate__c</errorDisplayField>
        <errorMessage>Please enter the date IRB Review was completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBCConceptReviewDateNeededPAB</fullName>
        <active>true</active>
        <description>If Concept PAB comments or recommendations have been entered, but Concept PAB review date is blank, throw an error. PAB review completed date is required.</description>
        <errorConditionFormula>(NOT( ISBLANK(   ConceptPABComments__c )) ||  NOT( ISBLANK(   ConceptPABRecommendations__c ) ) ) &amp;&amp; ISBLANK(   ConceptPABReviewDate__c )</errorConditionFormula>
        <errorDisplayField>ConceptPABReviewDate__c</errorDisplayField>
        <errorMessage>Please enter the date PAB Review was completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBC_Choose_Major_IT_Investment</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Is_it_a_Major_Investment__c , &quot;Yes&quot;)  &amp;&amp;   (IF(INCLUDES( Major_IT_Investments__c , &quot;Acquisition Gateway&quot;),1,0) + 
IF(INCLUDES( Major_IT_Investments__c , &quot;Analytics Service Platform&quot;),1,0) + 
IF(INCLUDES( Major_IT_Investments__c , &quot;Assisted Services Shared Information SysTem (ASSIST)&quot;),1,0) + 
IF(INCLUDES( Major_IT_Investments__c , &quot;cloud.gov&quot;),1,0) + 
IF(INCLUDES( Major_IT_Investments__c , &quot;consumer identity platform&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Contract Writing System (CWS)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;D2D&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Federal PKI Bridge&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Federal Real Property Asset Management&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Federal Supply Service 19 (FSS-19)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;GSA Advantage&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;GSA Conexus&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;GSA Real Estate Exchange (G-REX)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Network Hosting Center (NHC)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Network Services Ordering &amp; Billing System (NSOBS)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Order Management Service (OMS)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Real Estate Across the US (REXUS)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Regulatory Information Service Center (ROCIS II)&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Human Capital Information Technology Services&quot;),1,0) +
IF(INCLUDES( Major_IT_Investments__c , &quot;Integrated Award Environment (IAE)&quot;),1,0)
&gt; 3)</errorConditionFormula>
        <errorDisplayField>Major_IT_Investments__c</errorDisplayField>
        <errorMessage>Select upto 3 Major IT Investments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBC_Investment_name_Amendments_ME</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(  ISPICKVAL( Request_Type__c , &quot;Amendment&quot;) || ISPICKVAL( Request_Type__c , &quot;Major Enhancement&quot;),
( ISBLANK( Investment_Name__c )   &amp;&amp;   ISBLANK( Other_EBC__c )
))</errorConditionFormula>
        <errorDisplayField>Investment_Name__c</errorDisplayField>
        <errorMessage>Choose an Original EBC or Other EBC when Request type is Amendment or Major Enhancement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBC_Is_it_Major_IT_Investment_Yes</fullName>
        <active>true</active>
        <description>Major IT Investment cannot be blank when Is it a Major Investment is &quot;Yes&quot;.</description>
        <errorConditionFormula>AND(ISPICKVAL( Is_it_a_Major_Investment__c , &quot;Yes&quot;), (ISBLANK(  Major_IT_Investments__c )))</errorConditionFormula>
        <errorDisplayField>Major_IT_Investments__c</errorDisplayField>
        <errorMessage>Major IT Investment cannot be blank when Is it a Major Investment is &quot;Yes&quot;.</errorMessage>
    </validationRules>
</CustomObject>